Fix authors fields in DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,9 +6,10 @@ Authors@R:
              email = "Johannes.Rainer@eurac.edu",
              role = c("aut", "cre"),
              comment = c(ORCID = "0000-0002-6977-7147")),
-      person(given = "Chong", family = "Tang",
-             email = "chong.tang@uclouvain.be",
-	     role = "ctb"),
+      person(given = "Philippine", family = "Louail",
+             email = "philippine.louail@eurac.edu",
+	     role = "aut",
+	     comment = c(ORCID = "0009-0007-5429-6846")),
       person(given = "Laurent", family = "Gatto",
              email = "laurent.gatto@uclouvain.be",
 	     role = "ctb",
