--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,12 +3,11 @@
 export(PlainTextParam)
 exportMethods(readMsObject)
 exportMethods(saveMsObject)
+importClassesFrom(ProtGenerics,Param)
 importFrom(MsCoreUtils,common_path)
+importFrom(ProtGenerics,"dataStorage<-")
+importFrom(ProtGenerics,dataStorage)
 importFrom(S4Vectors,DataFrame)
-importFrom(Spectra,"dataStorage<-")
-importFrom(Spectra,MsBackendMzR)
-importFrom(Spectra,dataStorage)
-importFrom(Spectra,dropNaSpectraVariables)
 importFrom(methods,new)
 importFrom(utils,read.table)
 importFrom(utils,write.table)
