--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ importFrom(ProtGenerics,"dataStorage<-")
 importFrom(ProtGenerics,dataStorage)
 importFrom(ProtGenerics,spectra)
 importFrom(S4Vectors,DataFrame)
+importFrom(S4Vectors,SimpleList)
 importFrom(jsonlite,read_json)
 importFrom(jsonlite,serializeJSON)
 importFrom(jsonlite,unserializeJSON)
