--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: MsIO
 Title: Serializing and restoring/importing mass spectrometry data objects
-Version: 0.0.1
+Version: 0.0.3
 Authors@R:
     c(person(given = "Johannes", family = "Rainer",
              email = "Johannes.Rainer@eurac.edu",
@@ -27,7 +27,8 @@ Imports:
     methods,
     MsCoreUtils,
     S4Vectors,
-    ProtGenerics
+    ProtGenerics,
+    alabaster.base
 Suggests:
     testthat,
     knitr (>= 1.1.0),
@@ -35,7 +36,7 @@ Suggests:
     BiocStyle (>= 2.5.19),
     msdata,
     rmarkdown,
-    Spectra
+    Spectra (>= 1.15.6)
 License: Artistic-2.0
 Encoding: UTF-8
 VignetteBuilder: knitr
@@ -44,9 +45,10 @@ URL: https://github.com/RforMassSpectrometry/MsIO
 biocViews: Infrastructure, MassSpectrometry, Metabolomics, DataImport, Proteomics
 Roxygen: list(markdown=TRUE)
 RoxygenNote: 7.3.2
-Collate: 
+Collate:
     'AllGenerics.R'
     'MsBackend.R'
     'PlainTextParam.R'
     'MsBackendMzR.R'
     'Spectra.R'
+    'zzz.R'
