refactor: amend MsExperiment export/import

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,3 +22,4 @@ importFrom(methods,validObject)
 importFrom(stats,setNames)
 importFrom(utils,read.table)
 importFrom(utils,write.table)
+importMethodsFrom(S4Vectors,"mcols<-")
