refactor: amend export/import of XcmsExperiment

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ importFrom(jsonlite,write_json)
 importFrom(methods,as)
 importFrom(methods,callNextMethod)
 importFrom(methods,existsMethod)
+importFrom(methods,getFunction)
 importFrom(methods,new)
 importFrom(methods,validObject)
 importFrom(stats,setNames)
