feat: add export/import for MsBackendMzR and AlabasterParam
- Add `saveMsBackend,MsBackendMzR,AlabasterParam` and
  `readMsBackend,MsBackendMzR,AlabasterParam` methods.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,7 @@ Depends:
 Imports:
     jsonlite,
     methods,
-    MsCoreUtils,
+    MsCoreUtils (>= 1.17.1),
     S4Vectors,
     ProtGenerics,
     alabaster.base
