--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ importFrom(S4Vectors,SimpleList)
 importFrom(alabaster.base,altReadObject)
 importFrom(alabaster.base,altSaveObject)
 importFrom(alabaster.base,readObject)
+importFrom(alabaster.base,readObjectFile)
 importFrom(alabaster.base,registerReadObjectFunction)
 importFrom(alabaster.base,registerValidateObjectFunction)
 importFrom(alabaster.base,saveObjectFile)
