--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ importFrom(jsonlite,read_json)
 importFrom(jsonlite,serializeJSON)
 importFrom(jsonlite,unserializeJSON)
 importFrom(jsonlite,write_json)
+importFrom(methods,"slot<-")
 importFrom(methods,as)
 importFrom(methods,callNextMethod)
 importFrom(methods,existsMethod)
